--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/kit": "^2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.17",
+		"@types/lodash": "^4.17.21",
 		"@types/node": "^22",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
@@ -41,5 +42,8 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.47.0",
 		"vite": "^7.2.2"
+	},
+	"dependencies": {
+		"lodash": "^4.17.21"
 	}
 }
